[package]
name = "logbook-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
serde = {version = "1.0.144",  features = ["derive"]}
serde_json = "1.0.85"
structopt = "0.3.26"
tempfile = "3"